...
      },
      visibility: 10000,
      wind: { speed: 3.6, deg: 250 },
      clouds: { all: 75 },
      dt: 1711116547,
      id: 756135,
      name: 'Warsaw',
    },
    {
      coord: { lon: 17.0333, lat: 51.1 },
      sys: {
        country: 'PL',
        timezone: 3600,
...
